--- a/server/.env.example
+++ b/server/.env.example
@@ -3,7 +3,7 @@ SECRET_KEY='django-insecure-t$ipun$b++k)89ooqvwo)k30^#)b6*1z$t$%6$3pj^!tru8$59'
 # Debug mode
 DEBUG=True
 
-# Allowed hosts (add your Railway domain later)
+# Allowed hosts 
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # MySQL database settings
